...
    "Done": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "完了"
          }
        }
      }
    },
    "EIKEN grades": {
      "extractionState": "manual",
...
    "Help & support": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "ヘルプ・お問い合わせ"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
...
    "Privacy policy": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "プライバシーポリシー"
          }
        }
      }
    },
    "Proficient": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "%@に停止"
          }
        }
      }
    },
    "System": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "System"
...
